# ClayEngineVKDemoXR

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: Flat.frag.spv  Flat.vert.spv  Solid.frag.spv  Solid.vert.spv  Text.frag.spv  Text.vert.spv  Texture.frag.spv  Texture.vert.spv
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/application/: DemoAppXR.cpp  DemoAppXR.h
app/src/main/cpp/application/scenes/farm/: FarmScene.cpp  FarmScene.h
app/src/main/cpp/application/scenes/sandbox/: SandboxScene.cpp  SandboxScene.h
app/src/main/cpp/application/scenes/space/: SpaceScene.cpp  SpaceScene.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
